--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .pagination-no-selected {
+    @apply relative block py-1.5 px-3 border-0 outline-none transition-all duration-300 rounded focus:shadow-none hover:bg-gray-200 dark:hover:bg-gray-900 dark:hover:text-white text-gray-500 dark:text-gray-400;
+  }
+  .title-theme {
+    @apply dark:text-white;
+  }
+  .description-theme {
+    @apply text-gray-600 dark:text-gray-400;
+  }
+}
